# TrendSeer

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/trendseer/: __init__.py  config.py  core.py  detect.py  utils.py
tests/: test_core.py
